--- a/.github/workflows/mac14-f-h-j-p-s-sf-vfd.yml
+++ b/.github/workflows/mac14-f-h-j-p-s-sf-vfd.yml
@@ -33,7 +33,11 @@ jobs:
           ls
 
       - name: Build Ninja
+        env:
+          FC: /usr/local/bin/gfortran
         run: |
+          echo $FC
+          which gfortran
           pwd
           ls
           cd hdfsrc
