--- a/.github/workflows/mac14-f-h-j-p-s-sf-vfd.yml
+++ b/.github/workflows/mac14-f-h-j-p-s-sf-vfd.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Test snapshot
     runs-on: macos-14
+    continue-on-error: true    
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
