ci: install autotools

--- a/.github/workflows/msys2-auto.yml
+++ b/.github/workflows/msys2-auto.yml
@@ -40,6 +40,7 @@ jobs:
           update: true
           install: >-
             git
+            autotools
           pacboy: >-
             toolchain:p
       - name: Test HDF5
