test: make check

--- a/.github/workflows/msys2-auto.yml
+++ b/.github/workflows/msys2-auto.yml
@@ -52,4 +52,4 @@ jobs:
           ./autogen.sh
           ./configure CFLAGS="-Wno-implicit-function-declaration" LDFLAGS="-lws2_32"
           make
-
+          make check
