--- a/.github/workflows/msys2-auto.yml
+++ b/.github/workflows/msys2-auto.yml
@@ -3,16 +3,8 @@ name: msys2 auto
 on:
   workflow_dispatch:
   push:
-  pull_request:
-    branches: [ main- ]
-    paths-ignore:
-      - '.github/CODEOWNERS'
-      - '.github/FUNDING.yml'
-      - 'doc/**'
-      - 'release_docs/**'
-      - 'ACKNOWLEDGEMENTS'
-      - 'COPYING**'
-      - '**.md'
+    branches:
+      - main-
 
 permissions:
   contents: read
