ci: continue on error

--- a/.github/workflows/j.yml
+++ b/.github/workflows/j.yml
@@ -47,3 +47,4 @@ jobs:
             ctest -T Build --output-on-error -j
             ctest -T Test --output-on-error -j
             ctest -T Submit
+          continue-on-error: true
