--- a/.github/workflows/arm64-j-hk.yml
+++ b/.github/workflows/arm64-j-hk.yml
@@ -1,7 +1,9 @@
-name: arm64 j
+name: arm64 j hk
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main-
 jobs:
   test: # make sure the action works on a clean machine without building
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
