--- a/.github/workflows/arm64-j.yml
+++ b/.github/workflows/arm64-j.yml
@@ -34,7 +34,7 @@ jobs:
             whoami
             env | sort
             sudo pkg_add git
-            git clone https://github.com/hyoklee/hdf4-1 hdf4
+            git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             sudo pkg_add cmake
             sudo pkg_add jpeg
