--- a/.github/workflows/arm64-j.yml
+++ b/.github/workflows/arm64-j.yml
@@ -1,6 +1,9 @@
 name: arm64 j
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
