--- a/.github/workflows/j.yml
+++ b/.github/workflows/j.yml
@@ -3,7 +3,7 @@ name: j
 on:
   push:
     branches:
-      - main
+      - main-
 jobs:
   test: # make sure the action works on a clean machine without building
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
