--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Test snapshot
-    runs-on: macos-14-xl
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
@@ -40,8 +40,27 @@ jobs:
           mkdir build
           cd build
           cmake \
-          -D SITE:STRING=mac14xl \
-          -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DBUILD_SHARED_LIBS=ON \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_TOOLCHAIN_FILE=config/toolchain/clang.cmake \
+          -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
+          -DHDF5_BUILD_JAVA=ON \
+          -DHDF5_BUILD_FORTRAN:BOOL=ON \
+          -DHDF5_BUILD_HL_LIB:BOOL=ON \
+          -DHDF5_ENABLE_ALL_WARNINGS=ON \
+          -DHDF5_ENABLE_ANALYZER_TOOLS:BOOL=ON \
+          -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+          -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
+          -DHDF5_ENABLE_SANITIZERS:BOOL=ON \
+          -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+          -DHDF5_TEST_VFD:BOOL=ON \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+          -DHDF5_TEST_VFD:BOOL=ON \
+          -DMPIEXEC_MAX_NUMPROCS:STRING=16 \
+          -DUSE_SANITIZER:STRING='Address;Memory;MemoryWithOrigins;Undefined;Thread;Leak' \
+          -DSITE:STRING='mac14' \
           ..
           ctest -T Build --output-on-error -j
           ctest -T Test --output-on-error -j
