--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
-        run: brew install curl openssl libaec llvm mpich gfortran
+        run: brew install curl openssl libaec llvm mpich
+      - name: Install gfortran
+        uses: awvwgk/setup-fortran@v1
       - name: Get hdf5 release base name
         uses: dsaltares/fetch-gh-release-asset@master
         with:
