--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -12,9 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
-        run: brew install curl openssl libaec llvm mpich
-      - name: Install gfortran
-        uses: awvwgk/setup-fortran@v1
+        run: brew install curl openssl libaec llvm mpich gfortran
       - name: Get hdf5 release base name
         uses: dsaltares/fetch-gh-release-asset@master
         with:
