--- a/.github/workflows/mac14.yml
+++ b/.github/workflows/mac14.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
-        run: brew reinstall curl openssl libaec llvm mpich gfortran
+        run: brew reinstall curl openssl libaec llvm mpich gfortran cmake
       - name: Get hdf5 release base name
         uses: dsaltares/fetch-gh-release-asset@master
         with:
