ci: reinstall only gfortran

--- a/.github/workflows/mac14-clang17-f-h-j-p-s-sf-vfd.yml
+++ b/.github/workflows/mac14-clang17-f-h-j-p-s-sf-vfd.yml
@@ -12,7 +12,9 @@ jobs:
     continue-on-error: true
     steps:
       - name: Install Dependencies
-        run: brew install curl gfortran libaec llvm  openmpi openssl
+        run: |
+          brew install libaec llvm  openmpi
+          brew reinstall gfortran
       - name: Build HDF5
         run: |
           export PATH=/opt/homebrew/opt/llvm/bin:$PATH
