--- a/.github/workflows/port.yml
+++ b/.github/workflows/port.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Download MacPorts
-        run: curl -LO https://raw.githubusercontent.com/macports/install/master/install.zsh
+        run: curl -LO https://github.com/macports/macports-base/releases/download/v2.9.1/MacPorts-2.9.1-14-Sonoma.pkg
       - name: Install MacPorts
         run: |
-          chmod +x install.zsh
-          sudo ./install.zsh
+          sudo installer -pkg MacPorts-2.9.1-14-Sonoma.pkg  -target /
       - name: Install Port
         run: sudo port install flang
