--- a/.github/workflows/j.yml
+++ b/.github/workflows/j.yml
@@ -1,9 +1,10 @@
-name: j
+name: hdf4 j
 
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main-
+    branches: [ main ]
+
 jobs:
   test: # make sure the action works on a clean machine without building
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
@@ -41,11 +42,10 @@ jobs:
             sudo pkg_add cmake
             sudo pkg_add jpeg
             sudo pkg_add jdk-17.0.8.7.1p0v0
-            export PATH=/usr/local/jdk-17/bin/:$PATH
+            pkg_info -l jdk17
             mkdir build
             cd build
-            cmake -DHDF4_BUILD_FORTRAN:BOOL=OFF -D HDF4_BUILD_JAVA=ON -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -D SITE:STRING=j.obsd  ..
+            cmake -DHDF4_BUILD_FORTRAN:BOOL=OFF -D HDF4_BUILD_JAVA:BOOL=ON -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -D SITE:STRING=j  ..
             ctest -T Build --output-on-error -j
             ctest -T Test --output-on-error -j
             ctest -T Submit
-          continue-on-error: true
