--- a/.github/workflows/j.yml
+++ b/.github/workflows/j.yml
@@ -42,7 +42,7 @@ jobs:
             sudo pkg_add cmake
             sudo pkg_add jpeg
             sudo pkg_add jdk-17.0.8.7.1p0v0
-            pkg_info -l jdk17
+            find / -name 'java*'
             mkdir build
             cd build
             cmake -DHDF4_BUILD_FORTRAN:BOOL=OFF -D HDF4_BUILD_JAVA:BOOL=ON -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -D SITE:STRING=j  ..
