--- a/.github/workflows/lin-auto-gcc_arm64.yml
+++ b/.github/workflows/lin-auto-gcc_arm64.yml
@@ -37,6 +37,7 @@ jobs:
         make
         sudo make install
         cd ..
+        ln -s /home/runner/work/actions/actions/aarch64-linux-musl-cross/lib/libz.so.1.3.1.1-motley /home/runner/work/actions/actions/aarch64-linux-musl-cross/lib/libz.so
         pwd
         ls
         git clone https://github.com/HDFGroup/hdf4
@@ -44,4 +45,4 @@ jobs:
         autoreconf -fvi
         ./configure CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc CXX=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-g++  AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar CFLAGS="-I/home/runner/work/actions/actions/aarch64-linux-musl-cross/include/" LDFLAGS="-L/home/runner/work/actions/actions/aarch64-linux-musl-cross/lib" --host=aarch64-linux-musl --disable-netcdf --disable-fortran --enable-shared=no --enable-static-exec --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-jpeg=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-zlib=/home/runner/work/actions/actions/aarch64-linux-musl-cross
         make
-
+        make test
