--- a/.github/workflows/lin-auto-gcc_arm64.yml
+++ b/.github/workflows/lin-auto-gcc_arm64.yml
@@ -33,7 +33,7 @@ jobs:
         ls
         git clone https://github.com/madler/zlib
         cd zlib
-        CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar ./configure --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross
+        CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar ./configure --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross --static
         make
         sudo make install
         cd ..
@@ -43,6 +43,6 @@ jobs:
         git clone https://github.com/HDFGroup/hdf4
         cd hdf4
         autoreconf -fvi
-        ./configure CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar CFLAGS="-I/home/runner/work/actions/actions/aarch64-linux-musl-cross/include" LDFLAGS="-L/home/runner/work/actions/actions/aarch64-linux-musl-cross/lib" --host=aarch64-linux-musl --disable-netcdf --disable-fortran --enable-shared=no --enable-static-exec --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-jpeg=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-zlib=/home/runner/work/actions/actions/aarch64-linux-musl-cross --static
+        ./configure CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar CFLAGS="-I/home/runner/work/actions/actions/aarch64-linux-musl-cross/include" LDFLAGS="-L/home/runner/work/actions/actions/aarch64-linux-musl-cross/lib" --host=aarch64-linux-musl --disable-netcdf --disable-fortran --enable-shared=no --enable-static-exec --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-jpeg=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-zlib=/home/runner/work/actions/actions/aarch64-linux-musl-cross
         make
         make test
