--- a/.github/workflows/lin-auto-gcc_arm64.yml
+++ b/.github/workflows/lin-auto-gcc_arm64.yml
@@ -45,4 +45,4 @@ jobs:
         autoreconf -fvi
         ./configure CC=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-gcc AR=/home/runner/work/actions/actions/aarch64-linux-musl-cross/bin/aarch64-linux-musl-ar CFLAGS="-I/home/runner/work/actions/actions/aarch64-linux-musl-cross/include" LDFLAGS="-L/home/runner/work/actions/actions/aarch64-linux-musl-cross/lib" --host=aarch64-linux-musl --disable-netcdf --disable-fortran --enable-shared=no --enable-static-exec --prefix=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-jpeg=/home/runner/work/actions/actions/aarch64-linux-musl-cross --with-zlib=/home/runner/work/actions/actions/aarch64-linux-musl-cross
         make
-        make test
+        make check
