ci: arm64 auto hdf4

--- a/.github/workflows/arm64-auto.yml
+++ b/.github/workflows/arm64-auto.yml
@@ -2,7 +2,7 @@ name: arm64 auto
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -14,14 +14,14 @@ jobs:
         os:
           - name: openbsd
             architecture: arm64
-            version: '7.3'
+            version: '7.4'
             host: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.19.1
+        uses: cross-platform-actions/action@v0.22.0
         env:
           FOO: A
           BAR: B
@@ -36,8 +36,8 @@ jobs:
             sudo pkg_add autoconf-2.71
             sudo pkg_add automake-1.16.5
             sudo pkg_add libtool-2.4.2p2
-            git clone https://github.com/HDFGroup/hdf5
-            cd hdf5
+            git clone https://github.com/HDFGroup/hdf4
+            cd hdf4
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
             ls /usr/local/bin/
