--- a/.github/workflows/arm64-auto-f-j.yml
+++ b/.github/workflows/arm64-auto-f-j.yml
@@ -28,12 +28,16 @@ jobs:
           shell: bash
           run: |
             sudo pkg_add git
-            sudo pkg_add autoconf-2.71 automake-1.14.1p1 libtool
+            sudo pkg_add autoconf-2.71 automake-1.16.5 libtool
             sudo pkg_add jpeg
             sudo pkg_add jdk-17.0.8.7.1p0v0
+            sudo pkg_add g95-11.2.0p9
+            export FC=/usr/local/bin/egfortran
             export PATH=/usr/local/jdk-17/bin/:$PATH
             git clone https://github.com/hdfeos/hdf4
             cd hdf4
+            export AUTOCONF_VERSION=2.71
+            export AUTOMAKE_VERSION=1.16
             autoreconf -fvi
             ./configure --enable-fortran --enable-java
             make
