--- a/.github/workflows/arm64-auto.yml
+++ b/.github/workflows/arm64-auto.yml
@@ -36,12 +36,11 @@ jobs:
             sudo pkg_add autoconf-2.71
             sudo pkg_add automake-1.16.5
             sudo pkg_add libtool-2.4.2p2
+            sudo pkg_add jpeg	    
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
-            ls /usr/local/bin/
-            export HDF5_LIBTOOL=/usr/local/bin/libtoolize
             ./autogen.sh
             ./configure
             make
