ci: fix fortran

--- a/.github/workflows/arm64-auto-f-j.yml
+++ b/.github/workflows/arm64-auto-f-j.yml
@@ -39,7 +39,7 @@ jobs:
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
             autoreconf -fvi
-            ./configure --enable-fortran --enable-java
+            ./configure  F77=/usr/local/bin/egfortran --enable-fortran --enable-java
             make
             make check
             sudo make install
