ci: test /usr/local

--- a/.github/workflows/arm64-auto-f-j.yml
+++ b/.github/workflows/arm64-auto-f-j.yml
@@ -1,6 +1,8 @@
 name: arm64 auto f j
 
-on: [push, pull_request]
+on:
+  push:
+    branches: main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
