ci: add /usr/local

--- a/.github/workflows/mac14-auto-clang17-f-h4.yml
+++ b/.github/workflows/mac14-auto-clang17-f-h4.yml
@@ -26,6 +26,6 @@ jobs:
           git clone https://github.com/hyoklee/hdf4
           cd hdf4
           ./autogen.sh
-          ./configure --enable-fortran
+          ./configure --enable-fortran --with-jpeg=/usr/local
           make
           make check
