--- a/.github/workflows/mac14-auto-clang17-f-h4.yml
+++ b/.github/workflows/mac14-auto-clang17-f-h4.yml
@@ -23,9 +23,10 @@ jobs:
           export CC=$(brew --prefix llvm)/bin/clang
           export FC=/opt/homebrew/bin/gfortran
           echo $FC
+          locate libjpeg.a
           git clone https://github.com/hyoklee/hdf4
           cd hdf4
           ./autogen.sh
-          ./configure --enable-fortran --with-jpeg=/usr/local
+          ./configure --enable-fortran --with-jpeg=/opt/homebrew/opt
           make
           make check
