ci: disable continue-on-error

--- a/.github/workflows/mac14-auto-clang17-f.yml
+++ b/.github/workflows/mac14-auto-clang17-f.yml
@@ -3,13 +3,12 @@ name: mac14 auto clang17 f
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
     name: Test snapshot
     runs-on: macos-14
-    continue-on-error: true
     steps:
       - name: Install Dependencies
         run: |
