ci: brew info jpeg

--- a/.github/workflows/mac14-auto-clang17-f-h4.yml
+++ b/.github/workflows/mac14-auto-clang17-f-h4.yml
@@ -22,6 +22,7 @@ jobs:
           export CC=$(brew --prefix llvm)/bin/clang
           export FC=/opt/homebrew/bin/gfortran
           echo $FC
+          brew info jpeg
           git clone https://github.com/hyoklee/hdf4
           cd hdf4
           ./autogen.sh
