ci: test msys2 with no options

--- a/.github/workflows/mac14-auto-clang17-f-j-h4.yml
+++ b/.github/workflows/mac14-auto-clang17-f-j-h4.yml
@@ -3,7 +3,7 @@ name: mac14 auto clang17 f j h4
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ main- ]
 
 jobs:
   build:
