--- a/.github/workflows/msys2-auto.yml
+++ b/.github/workflows/msys2-auto.yml
@@ -19,6 +19,9 @@ jobs:
           - clang64
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v4.1.1
+
+
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
@@ -30,13 +33,29 @@ jobs:
           pacboy: >-
             toolchain:p
             libjpeg-turbo:p
+
       - name: Test HDF4
         shell: msys2 {0}
         run: |
           uname -a
           git clone https://github.com/hyoklee/hdf4.git
+
+      - name: Autotools Configure
+        shell: msys2 {0}
+        run: |
           cd hdf4
           ./autogen.sh
           ./configure LDFLAGS="-lws2_32" --disable-netcdf --disable-netcdf-tools --enable-static-exec
+
+      - name: Autotools Build
+        shell: msys2 {0}
+        run: |
+          cd hdf4	
           make
+	  
+      - name: Autotools Run Tests
+        shell: msys2 {0}
+        run: |
+          cd hdf4	
           make check
+
