--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -3,9 +3,7 @@ name: Check Markdown links
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]  
-  pull_request:
-    branches: [ main ]
+    branches: [ main- ]  
 
 jobs:
   markdown-link-check:
