--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -27,9 +27,9 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash          
           run: |
-            sudo pkg install git
-            sudo pkg install cmake
-            sudo pkg install jpeg
+            sudo pkg install -y git
+            sudo pkg install -y cmake
+            sudo pkg install -y jpeg
             git clone https://github.com/hyoklee/hdf4
             cd hdf4
             mkdir build
