--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -29,7 +29,7 @@ jobs:
           run: |
             sudo pkg install -y git
             sudo pkg install -y cmake
-            sudo pkg install -y jpeg
+            sudo pkg install -y jpeg-turbo
             git clone https://github.com/hyoklee/hdf4
             cd hdf4
             mkdir build
