--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -32,6 +32,7 @@ jobs:
             sudo pkg install -y jpeg-turbo
             sudo pkg install -y openjdk21
             pkg info -l openjdk21
+            export JAVA_HOME=/usr/local/openjdk21
             sudo mount -t fdescfs fdesc /dev/fd
             sudo mount -t procfs proc /proc
             git clone https://github.com/HDFGroup/hdf4
