--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -1,4 +1,4 @@
-name: fbsd
+name: fbsd f j
 
 on: [push, pull_request]
 
@@ -19,9 +19,9 @@ jobs:
         uses: cross-platform-actions/action@v0.23.0
         env:
           FOO: A
-          BAR: B        
+          BAR: B
         with:
-          environment_variables: FOO BAR        
+          environment_variables: FOO BAR
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
@@ -31,7 +31,8 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y jpeg-turbo
             sudo pkg install -y openjdk21
-            sudo pkg install -y gfortran
+            sudo pkg install -y gcc13
+            which gfortran
             pkg info -l openjdk21
             export JAVA_HOME=/usr/local/openjdk21
             sudo mount -t fdescfs fdesc /dev/fd
