--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -31,8 +31,7 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y jpeg-turbo
             sudo pkg install -y openjdk21
-            sudo pkg install -y gcc13
-            which gfortran
+            sudo pkg install -y lfortran
             pkg info -l openjdk21
             export JAVA_HOME=/usr/local/openjdk21
             sudo mount -t fdescfs fdesc /dev/fd
