--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -40,10 +40,11 @@ jobs:
             cd hdf4
             mkdir build
             cd build
-            cmake -DHDF4_BUILD_FORTRAN:BOOL=ON \
-            -DHDF4_BUILD_JAVA:BOOL=ON \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DSITE:STRING=j.f.fbsd ..
+            cmake \
+            -D BUILD_SHARED_LIBS=OFF \
+            -D HDF4_BUILD_FORTRAN:BOOL=ON \
+            -D HDF4_BUILD_JAVA:BOOL=ON \
+            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -D SITE:STRING=j.f.fbsd ..
             ctest -T Build
             ctest -T Test
-
