--- a/.github/workflows/freebsd-lf-j.yml
+++ b/.github/workflows/freebsd-lf-j.yml
@@ -44,9 +44,10 @@ jobs:
             cd build
             cmake \
             -D BUILD_SHARED_LIBS=OFF \
+            -D CMAKE_Fortran_FLAGS="--backend=llvm"
             -D HDF4_BUILD_FORTRAN:BOOL=ON \
             -D HDF4_BUILD_JAVA:BOOL=ON \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -D SITE:STRING=j.f.fbsd ..
+            -D SITE:STRING=j.lf.fbsd ..
             ctest -T Build
             ctest -T Test
