ci: move -y option

--- a/.github/workflows/netbsd.yml
+++ b/.github/workflows/netbsd.yml
@@ -31,9 +31,9 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkgin install -y git
-            sudo pkgin install -y cmake
-            sudo pkgin install -y jpeg-turbo
+            sudo pkgin -y install git
+            sudo pkgin -y install  cmake
+            sudo pkgin -y install  jpeg-turbo
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             mkdir build
