--- a/.github/workflows/netbsd.yml
+++ b/.github/workflows/netbsd.yml
@@ -34,6 +34,8 @@ jobs:
             sudo pkgin -y install git
             sudo pkgin -y install cmake
             sudo pkgin -y install jpeg-9e
+            sudo pkgin -y install mozilla-rootcerts
+            sudo mozilla-rootcerts install
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             mkdir build
